# fvm-lucky-draw

./: .gitignore  Cargo.toml  README.md
app_browser/: package-lock.json  package.json
app_browser/src/: App.css  App.js
app_nodejs/: cbor.js  index.js  package-lock.json  package.json
contrants/: Cargo.toml
contrants/src/: lib.rs  types.rs
src/: lib.rs  types.rs
